Fix pagination vertical alignment, increase size to support 10+ pages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2696,8 +2696,9 @@ img[data-src] {
 }
 .paginator__pages {
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
 }
 .paginator__selected {
   background-color: #ffe8e1;
